--- a/index.html
+++ b/index.html
@@ -8,44 +8,33 @@
     <title>pr3</title>
 </head>
 <body>
-    <div class="items">
-        <a href="#item1" class="active">Item 1</a>
-        <a href="#item2">Item 2</a>
-        <a href="#item3">Item 3</a>
-        <a href="#item4">Item 4</a>
-        <a href="#item5">Item 5</a>
-        <a href="#item6">Item 6</a>
-        <a href="#bruce">Bruce</a>  
-    </div>
-    <div id="content">
-        <div class="item1" style="display:none">
-            <img src="img/cat1.jpg" alt="American Shorthair">
-            <p>American ShortHair</p>
-        </div>
-        <div id="item2" style="display:none">
-            <img src="img/cat2.jpg" alt="Britain Shorthair">
-            <p>Britain Shorthair</p>
-        </div>
-        <div id="item3" style="display:none">
-            <img src="img/cat3.jpg" alt="Egypt Mau" height="300" width="400">
-            <p>Egypt Mau</p>
-        </div>
-        <div id="item4" style="display:none">
-            <img src="img/cat4.jpg" alt="Korat">
-            <p>Korat</p>
-        </div>
-        <div id="item5" style="display:none">
-            <img src="img/cat5.jpg" alt="Snow Shu">
-            <p>Snow Shu</p>
-        </div>
-        <div id="item6" style="display:none">
-            <img src="img/cat6.jpg" alt="Toyger" height="300" width="400">
-            <p>Toyger</p>
-        </div>
-        <div id="bruce" style="display:none">
-            <p>This is my lovely Cat, his name is BRUCE. Remember,pls.</p>
-            <img src="img/mylove.JPEG" alt="The Great Bruce" height="400" width="300">
-        </div>
+                    <div class="itemBlock">
+                        <a href="#block1" class="active">1</a>
+                        <a href="#block2" class="">2</a>
+                        <a href="#block3" class="">3</a>
+                        <a href="#block4" class="">4</a>
+                        <a href="#block5" class="">5</a>
+                        <a href="#block6" class="">6</a>
+                    </div>
+                        <div class="catBlock">
+                        <div id='block1' class=" active">
+                            <img src="img/cat1.jpg" alt="">
+                        </div>
+                        <div id="block2" style="display:none">
+                            <img src="img/cat2.jpg" alt="">
+                        </div>
+                        <div id="block3" style="display:none">
+                            <img src="img/cat3.jpg" alt="">
+                        </div>
+                        <div id="block4" style="display:none">
+                            <img src="img/cat4.jpg" alt="">
+                        </div>
+                        <div id="block5" style="display:none">
+                            <img src="img/cat5.jpg" alt="">
+                        </div>
+                        <div id="block6" style="display:none">
+                            <img src="img/mylove.JPEG" alt=""height="400" width="300">
+                        </div>
     </div>
 </body>
 </html>
